tests/host/include/host_ap_expire_auth_types.h

typedef unsigned long _irqL;
typedef int _lock;
static inline void _enter_critical_bh(_lock *plock, _irqL *pirqL)
{
	(void)plock;
	(void)pirqL;
}
static inline void _exit_critical_bh(_lock *plock, _irqL *pirqL)
{
	(void)plock;
	(void)pirqL;
}